# PineEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  PineEngine.sln  README.md  SpareShaderCode.txt  premake5.lua
CMAKE/: FindGLEW.cmake  FindGLFW.cmake  FindSDL2.cmake  FindSDL2Mixer.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
Engine Projects/MacOs/: CMakeCache.txt  cmake_install.cmake
Engine Projects/MacOs/CMakeScripts/: ReRunCMake.make
Engine Projects/MacOs/PineEngine.xcodeproj/: project.pbxproj
Engine Projects/Windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Game.vcxproj  Game.vcxproj.filters  PineEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
Engine Projects/Windows/Assets/Shaders/: default.PineShader
Engine Projects/Windows/Game.dir/Debug/: Game.exe.recipe
Engine Projects/Windows/Game.dir/Release/: Game.exe.recipe
Engine Projects/Windows/PineEngine/: PineEngine.vcxproj  PineEngine.vcxproj.filters  cmake_install.cmake
Engine Projects/vscode/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine Projects/vscode/Assets/Shaders/: default.PineShader
Engine Projects/vscode/PineEngine/: Makefile
Game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Game/Assets/Shaders/: default.PineShader
Game/Source/: MyGame.cpp  MyGame.h  Obstacles.cpp  Obstacles.h  Player.cpp  Player.h  StaticImage.cpp  StaticImage.h  main.cpp
Game/XCodeProject/: CMakeCache.txt  cmake_install.cmake
Game/XCodeProject/CMakeScripts/: ReRunCMake.make
Game/XCodeProject/PineEngine.build/Debug/ALL_BUILD.build/: Script-33B35AC8E92C2AC825A2FCFC.sh
Game/XCodeProject/PineEngine.build/Debug/Game.build/Objects-normal/x86_64/: Game.LinkFileList  MyGame.d  main.d
Game/XCodeProject/PineEngine.build/Debug/ZERO_CHECK.build/: Script-DD3583D9938E3A224B3CA60A.sh
Game/XCodeProject/PineEngine.xcodeproj/: project.pbxproj
Game/XCodeProject/PineEngine.xcodeproj/project.xcworkspace/xcuserdata/bradley.xcuserdatad/: UserInterfaceState.xcuserstate
Game/XCodeProject/PineEngine.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme
Game/XCodeProject/PineEngine.xcodeproj/xcuserdata/bradley.xcuserdatad/xcschemes/: xcschememanagement.plist
PMyGame/: PMyGame.vcxproj  PMyGame.vcxproj.filters
PMyGame/Source/: PMyGameApp.cpp  PMyGameApp.h  main.cpp
PMyGame/x64/Release/PMyGame.tlog/: CL.command.1.tlog  PMyGame.lastbuildstate
PMyServer/: PMyServer.aps  PMyServer.vcxproj  PMyServer.vcxproj.filters
PMyServer/Source/: PMyServer.cpp  PMyServer.h  main.cpp
PineEngine/: CMakeLists.txt  PineEngine.vcxproj  PineEngine.vcxproj.filters
PineEngine/Source/: Pine.h  PineServer.h
PineEngine/Source/Pine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Networking.cpp  Networking.h
PineEngine/Source/Pine/Components/: Component.cpp  Component.h  MaterialComponent.cpp  MaterialComponent.h  NetworkComponent.cpp  NetworkComponent.h  RendererComponent.cpp  RendererComponent.h
PineEngine/Source/Pine/Core/: ComponentSystem.cpp  ComponentSystem.h  Core.cpp  Core.h  EntryPoint.cpp  Game.cpp  Game.h  Input.cpp  Input.h  PineAPI.h  PineECS.cpp  PineECS.h  PineObject.h  Scene.cpp  Scene.h  window.cpp  window.h
PineEngine/Source/Pine/Core/ECS/: PComponent.cpp  PComponent.h  PGameObject.cpp  PGameObject.h  PineECS.cpp  PineECS.h
PineEngine/Source/Pine/Core/ECS/Components/: PCSquare.cpp  PCSquare.h  PCTransform.cpp  PCTransform.h
PineEngine/Source/Pine/Events/: Event.cpp  Event.h  EventSystem.cpp  EventSystem.h
PineEngine/Source/Pine/Logging/: Log.cpp  Log.h
PineEngine/Source/Pine/Maths/: PMaths.cpp  PMaths.h
PineEngine/Source/Pine/Networking/: Networking.cpp  Networking.h  ServerNetworking.cpp  ServerNetworking.h
PineEngine/Source/Pine/Primitives/2D/: PCircle.cpp  PCircle.h  PEntity.cpp  PEntity.h  PLine.cpp  PLine.h  PObject.cpp  PObject.h  PRect.cpp  PRect.h  PTriangle.cpp  PTriangle.h
PineEngine/Source/Pine/Rendering/: IndexBuffer.cpp  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  RenderingComponent.cpp  RenderingComponent.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h
bin-int/Debug-x64/PMyGame/: vc142.idb
bin-int/Debug-x64/PMyGame/PMyGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PMyGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/PineEngine/: PineEngine.vcxproj.FileListAbsolute.txt  vc142.idb
bin-int/Debug-x64/PineEngine/PineEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PineEngine.lastbuildstate  PineEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
winBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Game.vcxproj  Game.vcxproj.filters  PineEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
winBuild/Assets/Shaders/: default.PineShader
winBuild/Game.dir/Debug/: Game.exe.recipe
winBuild/Game.dir/RelWithDebInfo/: Game.exe.recipe
winBuild/Game.dir/Release/: Game.exe.recipe
winBuild/PineEngine/: PineEngine.vcxproj  PineEngine.vcxproj.filters  cmake_install.cmake
winBuild/PineEngine/PineEngine.dir/Debug/: PineEngine.lib.recipe  PineEngine.vcxproj.FileListAbsolute.txt
winBuild/PineEngine/PineEngine.dir/Release/: PineEngine.lib.recipe
winBuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
winBuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
winBuild/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/Assets/Shaders/: default.PineShader
xcode/CMakeScripts/: ReRunCMake.make
xcode/PineEngine/: cmake_install.cmake
xcode/PineEngine.build/Debug/ALL_BUILD.build/: Script-C15F03A8CE800B207D50A8CA.sh
xcode/PineEngine.build/Debug/Game.build/: Script-3E61B9EF5C6AA9EB96FFFF48.sh
xcode/PineEngine.build/Debug/ZERO_CHECK.build/: Script-037285CFB0D82692F3409401.sh
xcode/PineEngine.xcodeproj/: project.pbxproj
(+56 files in other folders)
